# goes-abi

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/goes19/: __init__.py  cli.py
python/goes_abi/: __init__.py  cli.py  mcp_server.py
src/: lib.rs  png.rs  viirs.rs  web_tiles.rs
src/satellite/: abi.rs  batch.rs  mod.rs  native_sequence.rs  netcdf.rs  rgb.rs
tests/fixtures/: viirs_firms_sample.csv
